<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/preferences" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="12sp"
                android:text="@string/notepad_id" />

            <EditText
                android:id="@+id/notepad_id"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="text"
                android:textSize="12sp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom|center_vertical"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_preferences"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="12sp"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/accept_preferences"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="12sp"
                android:text="@string/accept" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>